# multilang-inventory

./: .gitignore  Cargo.toml  commitlint.config.ts  cspell.json  eslint.config.mjs  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.devcontainer/: devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: on-pr.yml  on-push-main.yml
apps/api/: Cargo.toml  project.json
apps/api-java/: pom.xml  project.json
apps/api-java-jhipster/: .yo-rc.json  README.md  package.json  pom.xml  project.json  sonar-project.properties
apps/api-java-jhipster/.devcontainer/: devcontainer.json
apps/api-java-jhipster/webpack/: webpack.common.js  webpack.dev.js  webpack.microfrontend.js
apps/api-ts/: eslint.config.mjs  jest.config.ts  package.json  project.json  tsconfig.app.json  tsconfig.spec.json
apps/api-ts-e2e/: jest.config.ts  package.json  tsconfig.json
apps/api/src/: main.rs  modules.rs
apps/api/src/infra/: cache.rs  context.rs  db.rs  mod.rs  rate_limiter.rs
apps/api/src/infra/auth/: handlers.rs  mod.rs
apps/api/src/modules/products/: mod.rs
apps/api/src/modules/products/commands/: add_handler.rs
apps/api/src/modules/users/: mod.rs
apps/api/src/products/: commands.rs  mod.rs  routes.rs
apps/api/src/products/commands/: add_controller.rs  delete_controller.rs
apps/api/src/tests/: mod.rs
apps/web/: package.json  tsconfig.json
apps/web-e2e/: package.json  playwright.config.ts  tsconfig.json
libs/shared/: package.json  project.json  tsconfig.json  tsconfig.lib.json
(+199 files in other folders)
