[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["tokio", "tracing", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
jsonwebtoken = "9.2"
mongodb = { version = "3.2"}
nanoid = "0.4"
redis = { version = "0.23", features = ["tokio-comp"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
time = "0.3"
tokio = { version = "1.45", features = ["full"] }
tower = {version = "0.5", features = ["util"] }
tower_governor = { version = "0.7", features = ["axum", "tracing"]}
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = {version = "0.1", features = ["attributes"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
